# MiniFender

./: .gitmodules  CMakeLists.txt  README.md  auth.ini  authclient.cpp  authclient.h  clihandler.cpp  clihandler.h  configtemplate.json  core.cpp  core.h  dbmanager.cpp  dbmanager.h  engine.cpp  engine.h  enginehandler.cpp  enginehandler.h  httplib.h  main.cpp  readconfiguration.cpp  readconfiguration.h  settings.ini  webserver.cpp  webserver.h  workerthread.cpp  workerthread.h
